p2/confs/app1/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: tetris
spec: {}
status: {}
