p2/confs/app1/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
  namespace: tetris
  labels:
    app: tetris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
      - name: tetris
        image: uzyexe/tetris
        ports:
        - containerPort: 80
