p2/confs/app1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tetris
  labels:
    app.kubernetes.io/name: tetris
    app.kubernetes.io/part-of: tetris
    app.kubernetes.io/managed-by: kubectl
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: tetris
  sessionAffinity: None
  type: ClusterIP
